Issue 112 solved, pictures moved from About to Members page

--- a/web/templates/pages/members.html
+++ b/web/templates/pages/members.html
@@ -4,48 +4,45 @@
 
 {% block content%}
 
-	<header class="row">
-		<div class="col-lg-6 col-sm-7">
-			<h1>Who is who?</h1>
-		</div>
-		<div class="col-lg-6 col-sm-5">
-			<p>This page will tell a bit more about CodeCatz members.</p>
-		</div>
-	</header>
-	<div class="row">
-		<div class="col-md-3">
-			<p><img src="http://placekitten.com/g/350/350" alt="" class="img-responsive"></p>
-		</div>
-		<div class="col-md-10">
-			<h4>Little kitten 1 (name)</h4>
-			<p>About Kitten 1:Fun, ragdoll Gizmo boots feel caturday home whisker. Kitten, family run buddy curiosity furball sleeping boots. Backyard kitten friend's long pillow cat sunbathe beautiful petting kittens siam tabby dog baby lady cute disapproval belly her. Siam spoon buddy house smile feed me this spoon home cats fire cat meet.</p>
-		</div>
-		<div class="col-md-10">
-			<h5>Contact me:</h5>
-			<p>Links to FB, git... skype...</p>
-		</div>
-		<div class="col-md-10">
-			<h5>My projects</h5>
-			<p>Links to active projects</p>
-		</div>
-	</div>
+{% load staticfiles %}
 
+	<header class="row">
+			<h1>Who is who?</h1>
 	<div class="row">
-		<div class="col-md-3">
-			<p><img src="http://placekitten.com/g/350/358" alt="" class="img-responsive"></p>
+		<div>
+			<h2 class="about">Mentors</h2>
+			<ul class="about_list">
+				<li><a href="https://www.facebook.com/ialja?ref=ts&fref=ts"><img src="{% static "img/Alja.png" %}">Alja Isaković</a><li>
+				<li><a href="https://www.facebook.com/erika.pogorelc?fref=grp_mmbr_list"><img src="{% static "img/erikapogorelc.png" %}">Erika Pogorelc</a></li>
+				<li><a href="https://www.facebook.com/sparkica?fref=grp_mmbr_list"><img src="{% static "img/matejaverlic.png" %}">Mateja Verlič</a></li>
+				<li><a href="https://www.facebook.com/goranche?fref=grp_mmbr_list"><img src="{% static "img/goranblazic.png" %}">Goran Blažič</a></li>
+				<li><a href="https://www.facebook.com/jure.cuhalev?fref=grp_mmbr_list"><img src="{% static "img/jurecuhalev.png" %}">Jure Cuhalev</a></li>
+				<li><a href="https://www.facebook.com/svetka.sapelova?fref=grp_mmbr_list"><img src="{% static "img/cvetkasapelova.png" %}">Svetka Sapelova</li>
+			</ul>
 		</div>
-		<div class="col-md-10">
-			<h4>Little kitten 2 (name)</h4>
-			<p>About Kitten 2:I LOVE KIT KAT s feel caturday home whisker. Kitten, family run buddy curiosity furball sleeping boots. Backyard kitten friend's long pillow cat sunbathe beautiful petting kittens siam tabby dog baby lady cute disapproval belly her. Siam spoon buddy house smile feed me this spoon home cats fire cat meet.</p>
+		
+		<hr>
+		
+		<div>
+			<h2 class="about">Members</h2>
+			<ul class="about_list">
+				<li><a href='https://www.facebook.com/anuska.sirola?fref=tl_fr_box&pnref=lhc.friends'><img src="{% static "img/Anuska.png" %}">Anamarija Sustič</a></li>
+				<li><a href='https://www.facebook.com/asokica?fref=grp_mmbr_list'><img src="{% static "img/heidi.png" %}">Heidi Pungartnik</a></li>
+				<li><a href='https://www.facebook.com/petra.vidmar.14?fref=grp_mmbr_list'><img src="{% static "img/petra.png" %}">Petra Vidmar</a></li>
+				<li><a href='https://www.facebook.com/nina.ninchy2?fref=grp_mmbr_list'><img src="{% static "img/ninaninchy.png" %}">Nina Pristov</a></li>
+					<li><a href='https://www.facebook.com/mojca007?fref=grp_mmbr_list'><img src="{% static "img/mojca.png" %}">Mojca</a></li>
+				<li><a href='https://www.facebook.com/dobai.livia.5?fref=grp_mmbr_list'><img src="{% static "img/liviadobai.png" %}">Livia Dobai</a></li>
+				<li><a href='https://www.facebook.com/masa.c.logar?fref=grp_mmbr_list'><img src="{% static "img/masalogar.png" %}">Maša Černovšek Logar</a></li>
+				<li><a href='https://www.facebook.com/nina.malovrh.1?fref=grp_mmbr_list'><img src="{% static "img/ninamalovrh.png" %}">Nina Malovrh</a></li>
+				<li><a href='https://www.facebook.com/profile.php?id=1186838569&fref=grp_mmbr_list'><img src="{% static "img/hanaisnouk.png" %}">Hana Isnouk</a></li>
+				<li><a href='https://www.facebook.com/pijab1?fref=grp_mmbr_list'><img src="{% static "img/pijabalaban.png" %}">Pija Balaban</a></li>
+				<li><a href='https://www.facebook.com/nejc.jelovcan?fref=grp_mmbr_list'><img src="{% static "img/nejcjelovcan.png" %}">Nejc Jelovčan</a></li>
+				<li><a href='https://www.facebook.com/natasa.kristan.35?fref=grp_mmbr_list'><img src="{% static "img/natasamori.png" %}">Nataša Mori</a></li>
+				<li><a href='https://www.facebook.com/barbara.skubic.9?fref=grp_mmbr_list'><img src="{% static "img/barbaraskubic.png" %}">Barbara Skubic</a></li>
+				<li><a href='https://www.facebook.com/maria.cankar?fref=grp_mmbr_list'><img src="{% static "img/marijacankar.png" %}">Marija Cankar</a></li>
+				<li><a href='https://www.facebook.com/tjasa.zajc1'><img src="{% static "img/tjasazajc.png" %}">Tjaša Zajc</a></li>
+				</ul>
 		</div>
-		<div class="col-md-10">
-			<h5>Contact me:</h5>
-			<p>Links to FB(boycott!!!), git... skype...</p>
-		</div>
-		<div class="col-md-10">
-			<h5>My projects</h5>
-			<p>Links to active projects</p>
-		</div>
-	</div>
+		
 
 {% endblock content%}
