--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,6 +106,11 @@ code {
 	position: relative;
 }
 
+h1 {
+	text-align: center;
+	position: relative;
+}
+
 /* about page*/
 img{
 	width: 100px;
@@ -117,6 +122,9 @@ img{
 	list-style-type: none;
 	font-size: 20px;
 	color: #5C5C5C;
+	columns: 2;
+	-webkit-columns: 2;
+	-moz-columns: 2;
 }
 
 /* to hide title in the second column of Members*/
@@ -140,6 +148,7 @@ strong{
 	color: #5C5C5C;
 	font-size: 40px;
 	padding-top: 30px;
+	clear: both;
 }
 
 #frontpage{
