Used Google Maps Embed API for the map, commented out javascript in base.html and removed map styling in css

--- a/web/templates/layout/footer.html
+++ b/web/templates/layout/footer.html
@@ -1,4 +1,3 @@
-
 {%load static %}
 <footer>
 	<div class="container">
@@ -40,17 +39,22 @@
 					Creative Commons Attribution 4.0 International license.</a>
 			</p>
 		</div>
-		<div class="copyright col-md-6">
+		<div class="map col-md-6">
 			<p class="rampa-map">
-				You can find us every Wednesday @17.30 at RAMPA Laboratorij, Kersnikova 4 Ljubljana:
+				You can find us at RAMPA Laboratorij every Wednesday @17.30:
 			</p>
 			<div class="clearfix">
-            <a href="https://www.google.si/maps/place/Kersnikova+ulica+4/@46.0558232,14.5040802,17z/data=!4m3!3m2!1s0x4765329e4492e579:0x228cf6142750beae!4b1" target="_blank">  
-				<img src="{% static 'img/kersnikova4.png' %}" alt="Kersnikova 4, Ljubljana" class="map">
-            </a>
+				<a href="https://www.google.si/maps/place/Kersnikova+ulica+4/@46.0558232,14.5040802,17z/data=!4m3!3m2!1s0x4765329e4492e579:0x228cf6142750beae!4b1" target="_blank">  
+					<iframe
+						width="500"
+						height="250"
+						frameborder="0" style="border:0"
+						src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDeeTTMCKwoF-Np6-hzX2JuTiTsEk-SDYA
+						&q=Kersnikova+ulica+4,Ljubljana">
+					</iframe>
+				</a>
 			</div>
-
 		</div>
-
 	</div>
 </footer>
+
