--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -83,10 +83,10 @@
 						</p>
 					</div>
 			</div>
-		</footer>-->
+		</footer>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
+-->
 
 	</body>
 </html>
