--- a/web/templates/layout/footer.html
+++ b/web/templates/layout/footer.html
@@ -24,7 +24,7 @@
 			</div>
 			<div class="clearfix">
 				<a href="{% url 'pages-about' %}">
-					<img src="{% static 'img/codecatz_silver.png' %}" alt="CodeCatz" class="codecatz-logo">
+					<img src="{% static 'img/codecatz_silver_30_30.png' %}" alt="CodeCatz" class="codecatz-logo">
 				</a>
 			</div>
 		</div>		
