--- a/web/templates/pages/login.html
+++ b/web/templates/pages/login.html
@@ -13,5 +13,6 @@
 		<a href="{% url 'pages-edituser' %}" class="btn btn-default">Edit your profile</a>
 		</p>
 	</div>
+	<a href="{% url 'social:begin' 'github' %}"> login</a>
 
 {% endblock content%}
