removed cc icons, added twitter icon and removed wrap -60 bottom margin

--- a/web/templates/layout/footer.html
+++ b/web/templates/layout/footer.html
@@ -1,7 +1,7 @@
 {%load static %}
 <footer>
 	<div class="container">
-		<div class="col-md-8">
+		<div class="col-md-10">
 		<div>
 			<div class="clearfix icon-title">
 				Follow CodeCatz on:
@@ -18,7 +18,15 @@
 					<i class="fa fa-square-o fa-stack-2x"></i>
 					<i class="fa fa-github fa-stack-1x fa-inverse"></i>
 				</a>
+				<a href="https://twitter.com/codecatz" title="tweet us">
+					<span class="fa-stack fa-lg">
+					<i class="fa fa-square-o fa-stack-2x"></i>
+					<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+				</a>
 			</div>
+		</div>		
+		</div>
+		<div class="copyright col-md-2">
 			<div class="clearfix icon-title">
 				Coded by:
 			</div>
@@ -27,17 +35,6 @@
 					<img src="{% static 'img/codecatz_silver_30_30.png' %}" alt="CodeCatz" class="codecatz-logo">
 				</a>
 			</div>
-		</div>		
-		</div>
-		<div class="copyright col-md-4">
-			<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">
-					<img src="{% static 'img/cc-icons.png' %}" alt="CC Icon" class="cc-icons">
-				</a>
-			<p class="cc-text">
-				Except where otherwise noted, content on this site is licensed under a
-				<a href="http://creativecommons.org/licenses/by/4.0/" target="_blank">
-					Creative Commons Attribution 4.0 International license.</a>
-			</p>
 		</div>
 	</div>
 </footer>
