--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ body {
 	height: auto !important;
 	height: 100%;
 	/* Negative indent footer by it's height */
-	margin: 0 auto -60px;
+/*	margin: 0 auto -60px; */
 }
 
 /* Set the fixed height of the footer here */
@@ -26,11 +26,6 @@ footer {
 	display: block;
 	background-color: #402924;
 	color: #FFF;
-}
-
-footer img.cc-icons {
-	height: 45px;
-	width: 162px;
 }
 
 .footer-links {
