--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -68,7 +68,7 @@
 					<div class="col-md-4">
 						<ul class="footer-links">
 							<li><a href="{% url 'pages-about' %}">Sponsors</a></li>
-							<li><a href="{% url 'pages-about' %}">Privacy</a></li>
+							<li><a href="{% url 'pages-privacy' %}">Privacy</a></li>
 							<li><a href="{% url 'pages-about' %}">Support</a></li>
 						</ul>
 					</div> <!-- end col-md-5 -->
