Added deadline countdown timer, counting down the days...

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -57,6 +57,7 @@
 			</div><!-- /.container for navigation -->
 
 		<div class="container">
+			<div id="gbCountdown"></div>
 			{% block content %}{% endblock content %}
 		</div><!-- /.container for main content -->
 
@@ -85,5 +86,6 @@
 		</footer>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="{% static 'js/countdown.js' %}"></script>
 	</body>
 </html>
