Navigation bar "folding" fixed

--- a/web/templates/pages/events.html
+++ b/web/templates/pages/events.html
@@ -4,9 +4,16 @@
 
 {% block content%}
 
-	<div>
-		<h1>All CodeCatz Events</h1>
-		<p>This page will show all our events.</p>
-	</div>
+	<header class="row">
+		<div class="col-lg-6 col-sm-7">
+			<h1>All CodeCatz Events</h1>
+		</div>
+		<div class="col-lg-6 col-sm-5">
+			<p>This page will show all our events and photo gallery.</p>
+		</div>
+	</header>	
+	
+	<h3><a href="/gallery">Gallery</a></h3>
+	
 
 {% endblock content%}
