--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,11 +93,20 @@ code {
 }
 
 /* Fit CodeCatz image in navbar-brand. */
+.navbar-header{
+	padding: 0;
+
+}
+
 .navbar-brand{
 	padding: 6px;
+	width: 80px;
+	height: 40px;
 }
 .navbar-brand img{
-	height: 100%;
+	padding: 0;
+	width: 40px;
+	height: 40px;
 }
 
 /* Links page*/
