--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -41,16 +41,9 @@
 						<li class="{% current 'pages-projects' %}"><a href="{% url 'pages-projects' %}">Projects</a></li>
 						<li class="{% current 'pages-members' %}"><a href="{% url 'pages-members' %}">Members</a></li>
 						<li class="{% current 'pages-events' %}"><a href="{% url 'pages-events' %}">Events</a></li>
-						<li class="{% current 'pages-gallery' %}"><a href="{% url 'pages-gallery' %}">Gallery</a></li>
-						<li class="{% current 'pages-login' %}"><a href="{% url 'pages-login' %}">Login/Profile</a></li>
-						<li class="{% current 'pages-links' %}"><a href="{% url 'pages-links' %}">Links</a></li>
+						<li class="{% current 'pages-login' %}"><a href="{% url 'pages-login' %}">Login</a></li>
+						<li class="{% current 'pages-links' %}"><a href="{% url 'pages-links' %}">Help</a></li>
 					</ul>
-					<form class="navbar-form navbar-right" role="search">
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Search">
-						</div>
-						<button type="submit" class="btn btn-default">Submit</button>
-					</form>
 				</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
 			</nav>
