--- a/web/templates/pages/links.html
+++ b/web/templates/pages/links.html
@@ -14,4 +14,11 @@
 		<p><a href="http://uxporn.uxpin.com/">UXPorn</a></p>
 	</div>
 
+	<form class="navbar-form navbar-right" role="search">
+		<div class="form-group">
+			<input type="text" class="form-control" placeholder="Search">
+		</div>
+		<button type="submit" class="btn btn-default">Submit</button>
+	</form>
+
 {% endblock content%}
