--- a/web/templates/pages/members.html
+++ b/web/templates/pages/members.html
@@ -21,14 +21,11 @@
 			{% for member in members_list %}
 				{% if member.activity_status == 'MC' %}
 					<li><a href="{{member.githubuser}}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Mentor cat)<li>
-				{% endif %}
-				{% if member.activity_status == 'AC' %}
+				{% elif member.activity_status == 'AC' %}
 					<li><a href="{{member.githubuser}}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Active cat)<li>
-				{% endif %}
-				{% if member.activity_status == 'LC' %}
-					<li><a href="{{member.githubuser}}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Lazy cat)<li>
-				{% endif %}	
-				{% if member.activity_status == 'SC' %}
+				{% elif member.activity_status == 'LC' %}
+					<li><a href="{{member.githubuser}}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Lazy cat)<li>	
+				{% elif member.activity_status == 'SC' %}
 					<li><a href="{{member.githubuser}}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Sleepy cat)<li>
 				{% endif %}	
 			{% endfor %}
