--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -13,7 +13,11 @@
 		<link rel="stylesheet" href="{% static 'css/style.css' %}">
 	</head>
 	<body>
-<!-- Wrap all page content here -->
+{% block navigation %}
+	{% include 'layout/navigation.html' %}
+{% endblock %}
+
+<!-- Wrap all page content here 
 		<div id="wrap">
 
 		<div class="container-fluid">
@@ -54,7 +58,7 @@
 				</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
 			</nav>
-			</div><!-- /.container for navigation -->
+			</div><!-- /.container for navigation -->-->
 
 		<div class="container">
 			{% block content %}{% endblock content %}
