--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -44,6 +44,12 @@
 						<li class="{% current 'pages-login' %}"><a href="{% url 'pages-login' %}">Login</a></li>
 						<li class="{% current 'pages-links' %}"><a href="{% url 'pages-links' %}">Help</a></li>
 					</ul>
+					<form class="navbar-form navbar-right" role="search">
+						<div class="form-group">
+							<input type="text" class="form-control" placeholder="Search">
+						</div>
+						<button type="submit" class="btn btn-default">Submit</button>
+					</form>
 				</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
 			</nav>
