--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -39,6 +39,7 @@
 					<ul class="nav navbar-nav">
 						<li class="{% current 'pages-about' %}"><a href="{% url 'pages-about' %}">About</a></li>
 						<li class="{% current 'pages-projects' %}"><a href="{% url 'pages-projects' %}">Projects</a></li>
+						<li class="{% current 'pages-tasks' %}"><a href="{% url 'pages-tasks' %}">Tasks</a></li>
 						<li class="{% current 'pages-members' %}"><a href="{% url 'pages-members' %}">Members</a></li>
 						<li class="{% current 'pages-events' %}"><a href="{% url 'pages-events' %}">Events</a></li>
 						<li class="{% current 'pages-login' %}"><a href="{% url 'pages-login' %}">Login</a></li>
