--- a/web/templates/layout/navigation.html
+++ b/web/templates/layout/navigation.html
@@ -4,16 +4,21 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
 	<div class="collapse navbar-collapse" id="myNavbar-top-right">
-      <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-left">
+		<li><a class="navbar-brand" href="#">TrackCat</a></li>
+	</ul>  
+	<ul class="nav navbar-nav navbar-right">
         <li><a href="#">About</a></li>
         <li><a href="#">Events</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Links</a></li>
-      </ul>
+	</ul>
     </div>
 	<div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
+		<li><a href="#">Projects</a></li>
+		<li><a href="#">Tasks</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
