--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -4,26 +4,38 @@
 
 {% block content%}
 
-  <header class="row">
-    <div class="col-lg-6 col-sm-7">
-      <h1>All CodeCatz Tasks</h1>
-	    <div class="col-lg-6 col-sm-5">
+	<header class="row">
+		<div class="col-lg-6 col-sm-7">
+		      <h1>All CodeCatz Tasks</h1>
+		<div class="col-lg-6 col-sm-5">
 			<p>This page will show all tasks and who they are assigned to.</p>
-	    </div>
-  </header>
+		</div>
+	</header>
 	  
-	  <div class="row">
+	<div class="row">
 	{% for task in task_list %}
 		<div class="col-md-3 col-xs-6">
-		<h3>{{ task.title }}</h3>
-		<p><strong>Status:</strong> {{ task.get_status_display }}</p>
-		<p><strong>Assigned to:</strong> {{ task.get_assigned_id_display }}</p>
+			<h3>{{ task.title }}</h3>
+			<p><strong>Status:</strong> {{ task.get_status_display }}</p>
+			<p><strong>Assigned to:</strong> {{ task.get_assigned_id_display }}</p>
+			<p><strong>Part of project:</strong>
+			{{ task.get_project_id_display }}</p>
+			<p><strong>Project owner:</strong> {{ task.get_owner_id_display }}</p>
+			
 		{% if project.project_deadline %}
-		<p><strong>Deadline:</strong>
+			<p><strong>Deadline:</strong>
 		{{ task.deadline|date:"d.m.Y" }}</p>
-		{% endif %}
-			</p>	
+		{% endif %}	
+		
 		</div>
-	  </div>
-{% endfor %}
+		{% if forloop.last %}
+			</div>
+		{% else %}
+			{% if forloop.counter|divisibleby:"4" %}
+				</div>
+				<div class="row">
+			{% endif %}
+		{% endif %}
+	{% endfor %}
+
 {% endblock content%}
