changed mamber_page name and deleted id in models - UserProfile as it is authomatic

--- a/web/templates/pages/member_page.html
+++ b/web/templates/pages/member_page.html
@@ -7,7 +7,7 @@
 {% block content%}
 
 	<div class="row">
-		<div class="memper_profile">
+		<div class="member_profile">
 			<div class="col-md-12">
 			<h2>{% if user.fullname %}
 			{{ user.fullname }} 
