--- a/web/templates/pages/members.html
+++ b/web/templates/pages/members.html
@@ -20,7 +20,9 @@
 			<ul class="about_list">
 			{% for member in members_list %}
 				{% if member.activity_status == 'MC' %}
-					<li class="mentor-cat"><a href="{{member.githubuser}}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Mentor cat)<li>
+					<li class="mentor-cat"><a href="{% url 'pages-members' %}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Mentor cat)<li>
+						<a href="{% url 'web.views.members_detail' user=member.user %}">{{member.user}}</a></h3>
+						{{member.user}}
 				{% elif member.activity_status == 'AC' %}
 					<li class="active-cat"><a href="{{member.githubuser}}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Active cat)<li>
 				{% elif member.activity_status == 'LC' %}
@@ -28,6 +30,7 @@
 				{% elif member.activity_status == 'SC' %}
 					<li class="sleepy-cat"><a href="{{member.githubuser}}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Sleepy cat)<li>
 				{% endif %}	
+				Change Profile
 			{% endfor %}
 			</ul>
 		</div>			
