--- a/web/templates/pages/members.html
+++ b/web/templates/pages/members.html
@@ -22,11 +22,11 @@
 				{% if member.activity_status == 'MC' %}
 					<li class="mentor-cat"><a href="{% url 'web.views.member_page' user_id=member.id %}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Mentor cat)<li>
 				{% elif member.activity_status == 'AC' %}
-					<li class="mentor-cat"><a href="{% url 'web.views.member_page' user_id=member.id %}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Active cat)<li>
+					<li class="active-cat"><a href="{% url 'web.views.member_page' user_id=member.id %}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Active cat)<li>
 				{% elif member.activity_status == 'LC' %}
-					<li class="mentor-cat"><a href="{% url 'web.views.member_page' user_id=member.id %}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Lazy cat)<li>	
+					<li class="lazy-cat"><a href="{% url 'web.views.member_page' user_id=member.id %}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Lazy cat)<li>	
 				{% elif member.activity_status == 'SC' %}
-					<li class="mentor-cat"><a href="{% url 'web.views.member_page' user_id=member.id %}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Sleepy cat)<li>
+					<li class="sleepy-cat"><a href="{% url 'web.views.member_page' user_id=member.id %}"><img src="../static/img/{{member.profile_picture}}">{{member.fullname}}</a> (Sleepy cat)<li>
 				{% endif %}	
 			{% endfor %}
 			</ul>
