--- a/web/templates/layout/navigation.html
+++ b/web/templates/layout/navigation.html
@@ -2,21 +2,21 @@
 {%load static %}
 
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+	<div class="container-fluid">
 	<div class="collapse navbar-collapse" id="myNavbar-top-right">
-    <ul class="nav navbar-nav navbar-left">
-		<li><a class="navbar-brand" href="#">TrackCat</a></li>
-	</ul>  
-	<ul class="nav navbar-nav navbar-right">
-        <li><a href="{% url 'pages-about' %}">About</a></li>
-        <li><a href="{% url 'pages-events' %}">Events</a></li>
-        <li><a href="{% url 'pages-links' %}">Links</a></li>
-	</ul>
-    </div>
+		<ul class="nav navbar-nav navbar-left">
+			<li><a class="navbar-brand" href="#">TrackCat</a></li>
+		</ul>  
+		<ul class="nav navbar-nav navbar-right">
+			<li><a href="{% url 'pages-about' %}">About</a></li>
+			<li><a href="{% url 'pages-events' %}">Events</a></li>
+			<li><a href="{% url 'pages-links' %}">Links</a></li>
+		</ul>
+		</div>
 	<div class="collapse navbar-collapse" id="myNavbar">
 		<ul class="nav navbar-nav" role="menu">
 		<li>
-			<a href="{% url 'pages-index' %} "first" id="index">
+			<a href="{% url 'pages-index' %} id="index">
 				<span class="fa-stack fa-lg">
 				<i class="fa fa-circle fa-stack-2x"></i>
 				<i class="fa fa-home fa-stack-1x fa-inverse"></i>
@@ -42,8 +42,8 @@
 			Members
 			</a>
 		</li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
+		</ul>
+		<ul class="nav navbar-nav navbar-right">
 		<li class="dropdown pull-right">
 		{% if user.is_authenticated %}
 			<a href="{% url 'pages-members' %}" class="dropdown-toggle avatar" data-toggle="dropdown">
@@ -58,14 +58,15 @@
 			</li>
 			</ul>
 		{% else %}
-			 <div class="login-body">
-		        <a href="{% url 'pages-login' %}"
-			    <i class="fa fa-sign-in"></i> Sign in</a>
+			<div class="login-body">
+					<a href="{% url 'pages-login' %}"
+					<i class="fa fa-sign-in"></i> Sign in</a>
 			</div>
 		{% endif %}
 		</li>
 		</ul>
-      </ul>
-    </div>
+		</ul>
+		</div>
 </div>
 </nav>
+
