member_page updates (new line, indent)

--- a/web/templates/pages/member_page.html
+++ b/web/templates/pages/member_page.html
@@ -9,14 +9,7 @@
 	<div class="row">
 		<div class="member_profile">
 			<div class="col-md-12">
-			<h2>{% if user.fullname %}
-			{{ user.fullname }} 
-			{% else %}
-			{{ user.username }}
-			{% endif %}'s profile</h2>
-			{% for field in form %}
-			{{ field.error }}
-			{% endfor %}
+				<h2>{{ user.fullname }}'s profile</h2>
 			</div>	
 		</div>
 	</div>
@@ -39,7 +32,6 @@
 			<p>{{ user.bio }}</p>
 		</div>
 		<a href="{% url 'web.views.edituser' user_id=user.id %}">Update profile</a>
-
 	</div>	
 
 {% endblock content%}
