--- a/web/templates/pages/member_page.html
+++ b/web/templates/pages/member_page.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-4 col-xs-6">
-			<img  src="{% static 'img/petra.png' %}"class="img-responsive" alt="Responsive image">
+			<img src="../../static/img/{{user.profile_picture}}">
 			<p><strong>GitHub Name:</strong></p>
 			<p>{{ user.githubuser }}</p>
 			<p><strong>Emal:</strong></p>
