fixed colors of the page in CSS, identation and some additional display options on tasks.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,7 @@ footer {
 	font-size: 12px;
 	border-top: 1px solid #CCCCCC;
 	display: block;
-	background-color: #EBCF49;
+	background-color: #AECC54;
 }
 
 .footer-links {
@@ -42,7 +42,7 @@ footer {
 }
 
 .container-fluid {
-	background-color: #57BF45;
+	background-color: #000000;
 }
 
 
