removed console.log msgs in deadline notice

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -56,7 +56,7 @@
 			</div><!-- /.container for navigation -->
 
 		<div class="container">
-			<div id="gbCountdown"></div>
+			<div id="gbCountdown">&nbsp;</div>
 			{% block content %}{% endblock content %}
 		</div><!-- /.container for main content -->
 
