--- a/web/templates/pages/tasks.html
+++ b/web/templates/pages/tasks.html
@@ -8,21 +8,19 @@
 		<div class="col-lg-6 col-sm-7">
 		      <h1>All CodeCatz Tasks</h1>
 		</div>
-		<div class="col-lg-6 col-sm-5">
-			<p>This page shows all tasks and which cats they are assigned to.</p>
-		</div>
 	</header>
 
-	<div class="row">
+	{% if task_list %}
 		
-	{% for task in task_list %}
-		<div class="col-md-3 col-xs-6">
+		<div class="row">	
+		
+			{% for task in task_list %}
+		
+			<div class="col-md-3 col-xs-6">
 			<h3><strong>Task title:</strong>{{ task.title }}</h3>
-				<p><strong>Status:</strong> {{ task.status }}</p>
 				<p><strong>Assigned to:</strong> {{ task.assigned_id }}</p>
-				<p><strong>Part of project:</strong><a href= "{% url 'web.views.projects' %}"> 
+				<p><strong>Part of project:</strong><a href= "{% url 'web.views.project_detail' project_id=task.project_id.project_id %}"> 
 			{{ task.project_id.project_name }}</a></p>
-				<p><strong>Project owner:</strong> {{ task.owner_id.fullname }}</p>
 				<br></br>
 				<p><strong>Description:</strong> {{ task.description }} </p>
 
@@ -30,16 +28,14 @@
 			<p><strong>Deadline:</strong>
 		{{ task.deadline|date:"d.m.Y" }}</p>
 		{% endif %}
+		</div>
 
+			{% endfor %}
+	<div>
+	{% else %}
+		<div class="alert alert-info"><p> There are currently no tasks in tasks list.</p>
 		</div>
-				
-		{% if forloop.last %}
-			</div>
-		{% else %}
-			{% if forloop.counter|divisibleby:"4" %}
-		</div>
-			{% endif %}
-		{% endif %}
-	{% endfor %}
+	</div>
+	{% endif %}
 
 {% endblock content%}
