--- a/web/templates/pages/project_edit.html
+++ b/web/templates/pages/project_edit.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-	<h1>New project</h1>
+	<h1 class="pull-left">{% if editing %}Edit{% else %}Add {% endif %} your project</h1>
 	<form method="POST">{% csrf_token %}
 		{{ projectform.as_p }}
 		<button type="submit" class="save btn btn-default">Save</button>
@@ -15,4 +15,12 @@
 
 {% block custom_js %}
 	<script type="text/javascript" src="{% static 'js/jquery.datetimepicker.js' %}"></script>
+	<script type="text/javascript">
+	jQuery(document).ready(function($){
+		$("#id_datepicker").datetimepicker({
+			timepicker:false,
+			format:'Y-m-d'
+		});
+	});
+	</script>
 {% endblock custom_js %}
