--- a/web/templates/pages/projects.html
+++ b/web/templates/pages/projects.html
@@ -15,28 +15,31 @@
 	<div class="row">
 		<a class="btn btn-default" href="{% url 'project-new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 	</div>
-	<div class="row">
-	{% for project in project_list %}
-		<div class="col-md-3 col-xs-6">
-			<h3><a href="{% url 'project-detail' project_id=project.project_id %}">{{project.project_name}}</a></h3>
-			<p><strong>Description:</strong></p>
-			<p>{{ project.project_description }}</p>
-			<p><strong>Status:</strong> {{ project.get_status_id_display }}</p>
-			<p><strong>Project launch:</strong> {{ project.date_created|date:"m. Y" }}</p>
+	{% if project_list %}
+		<div class="row">
+		{% for project in project_list %}
+			<div class="col-md-3 col-xs-6">
+				<h3><a href="{% url 'project-detail' project_id=project.project_id %}">{{project.project_name}}</a></h3>
+				<p><strong>Description:</strong></p>
+				<p>{{ project.project_description }}</p>
+				<p><strong>Status:</strong> {{ project.get_status_id_display }}</p>
+				<p><strong>Project launch:</strong> {{ project.date_created|date:"m. Y" }}</p>
 
-			{% if project.project_deadline %}
-				<p><strong>Project deadline:</strong> {{ project.project_deadline|date:"d.m.Y" }}</p>
-			{% endif %}
+				{% if project.project_deadline %}
+					<p><strong>Project deadline:</strong> {{ project.project_deadline|date:"d.m.Y" }}</p>
+				{% endif %}
 
-		</div>
-		{% if forloop.last %}
 			</div>
-		{% else %}
-			{% if forloop.counter|divisibleby:"4" %}
+			{% if forloop.last %}
 				</div>
-				<div class="row">
+			{% else %}
+				{% if forloop.counter|divisibleby:"4" %}
+					</div>
+					<div class="row">
+				{% endif %}
 			{% endif %}
-		{% endif %}
-	{% endfor %}
-
+		{% endfor %}
+	{% else %}
+		<p>There are currently no projects in your projects list.</p>
+	{% endif %}
 {% endblock content%}
