fixes broken project form

--- a/web/templates/pages/project_edit.html
+++ b/web/templates/pages/project_edit.html
@@ -17,10 +17,10 @@
 	<script type="text/javascript" src="{% static 'js/jquery.datetimepicker.js' %}"></script>
 	<script type="text/javascript">
 	jQuery(document).ready(function($){
-		$("#id_datepicker").datetimepicker({
-			timepicker:false,
-			format:'Y-m-d'
-		});
+		//$("#id_datepicker").datetimepicker({
+		//	timepicker:false,
+		//	format:'Y-m-d'
+		//});
 	});
 	</script>
 {% endblock custom_js %}
