--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,7 @@
-/* Sticky footer styles
--------------------------------------------------------------- */
-
 html,
 body {
 	height: 100%;
+	background-color: #D9C5AD;
 	/* The html and body elements cannot have any padding or margin. */
 }
 
@@ -23,13 +21,14 @@ footer {
 	font-size: 12px;
 	border-top: 1px solid #CCCCCC;
 	display: block;
-	background-color: #AECC54;
+	background-color: #402924;
 }
 
 .footer-links {
 	list-style-type: none;
+	padding: 0px;
+	margin: 0px;
 }
-
 
 .footer-links li {
 	list-style-type: none;
@@ -42,9 +41,8 @@ footer {
 }
 
 .container-fluid {
-	background-color: #000000;
+	background-color: #734F43;
 }
-
 
 /* Lastly, apply responsive CSS fixes as necessary */
 .CClogo {
@@ -172,20 +170,22 @@ strong {
 
 /* member */
 
-.sleepy_cat {
+.sleepy_cat { 
 	font-size: 12px;
 }
 
-.lazy_cat {
+.lazy_cat { 
 	font-size: 12px;
 }
 
-.active_cat {
+.active_cat { 
 	font-size: 12px;
 }
 
-.mentor_cat {
+.mentor_cat { 
 	font-size: 12px;
 }
+
+a:active { color: red; font-weight: bold; }
 
 /* end of about page */
