--- a/web/templates/pages/project_edit.html
+++ b/web/templates/pages/project_edit.html
@@ -6,16 +6,15 @@
 {% endblock %}
 
 {% block content %}
-
-	{% if project and editing %}
+	{% if invalid_project_id %}
 		<p class="alert alert-warning">This project does not exists in your projects list.</p>
 		<p>Return to <a href="{% url 'pages-projects' %}">Projects</a></p>
-	{% else %}
+	{%  else %}	
 		<h1 class="pull-left">{% if editing %}Edit{% else %}Add{% endif %} your project</h1>
 		<form method="POST">{% csrf_token %}
 			{{ projectform.as_p }}
 			<button type="submit" class="save btn btn-default">Save</button>
-		</form>	
+		</form>
 	{% endif %}	
 {% endblock content %}
 
